--- a/src/main/resources/templates/createLeave.html
+++ b/src/main/resources/templates/createLeave.html
@@ -31,7 +31,7 @@
                         <tr>
                             <th>Start Date</th>
                                 <td><input type="date" id="takeLeaveStartDate" name= startDate th:field="*{startDate}" placeholder="Choose Start Date" />
-                                <script type="text/javascript">takeLeaveStartDate.min=new Date().toISOString().split("T")[0];</script></td>                
+                                <script type="text/javascript">takeLeaveStartDate.min=new Date().toISOString().split("T")[0]</script></td>                
                             </td>
                         </tr>
 
