fixing leave attribute

--- a/src/main/resources/templates/createLeave.html
+++ b/src/main/resources/templates/createLeave.html
@@ -73,7 +73,17 @@
 
                         <tr>
                             <th>Reason</th>
-                            <td><textarea lass="form-control" name= reason th:field="*{reason}">Please Enter Your Reason</textarea></td> 
+                            <td><textarea class="form-control" name= reason th:field="*{reason}" placeholder="Please Enter Your Reason (Mandatory)">Please Enter Your Reason</textarea></td> 
+                           
+                        </tr>
+                        <tr>
+                            <th>Work Dissemination</th>
+                            <td><textarea class="form-control" name= reason th:field="*{workDissemination}" placeholder="Please enter work dissemination (if any)"></textarea></td> 
+                           
+                        </tr>
+                        <tr>
+                            <th>Contact Detail</th>
+                            <td><textarea class="form-control" name= reason th:field="*{contactDetail}" placeholder="Please enter your contactDetail (if you are on oversea trip)"></textarea></td> 
                            
                         </tr>
 
