--- a/src/main/resources/templates/editLeave.html
+++ b/src/main/resources/templates/editLeave.html
@@ -71,6 +71,16 @@
                                 <td><textarea th:field="*{reason}" rows= "5" cols="40" class="form-control"></textarea>
                        
                         </tr>
+                        <tr>
+                            <th>Work Dissemination</th>
+                            <td><textarea th:field="*{workDissemination}" rows= "5" cols="40" class="form-control"></textarea></td> 
+                           
+                        </tr>
+                        <tr>
+                            <th>Contact Detail</th>
+                            <td><textarea th:field="*{contactDetail}" rows= "5" cols="40" class="form-control"></textarea></td> 
+                           
+                        </tr>
 
                         <tr>
                             <td></td>
