--- a/src/main/resources/templates/leaveDetail.html
+++ b/src/main/resources/templates/leaveDetail.html
@@ -45,6 +45,14 @@
             <td th:utext = "*{reason}"></td>
         </tr>
         <tr>
+            <th><span>Work Dissemination</span></th>
+            <td th:utext = "*{workDissemination}"></td>
+        </tr>
+        <tr>
+            <th><span>Contact Detail</span></th>
+            <td th:utext = "*{contactDetail}"></td>
+        </tr>
+        <tr>
             <th><span>Status</span></th>
             <td th:utext = "*{status}"></td>
         </tr>
