--- a/src/main/resources/templates/manager-leave-detail.html
+++ b/src/main/resources/templates/manager-leave-detail.html
@@ -49,6 +49,16 @@
           <td style="text-align:left" th:text="${leave.reason}">Justification</td>
         </tr>
 
+        <tr>
+          <th align="right"><span>Work Dissemination</span></th>
+          <td style="text-align:left" th:text="${leave.workDissemination}">Justification</td>
+        </tr>
+
+        <tr>
+          <th align="right"><span>Contact Detail</span></th>
+          <td style="text-align:left" th:text="${leave.contactDetail}">Justification</td>
+        </tr>
+
 
 
     
