--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -118,7 +118,7 @@ body {
 
 
 <div class="container">
-    <div class="brand-title">Welcome back</div>
+    <div class="brand-title">Welcome</div>
     <form action="#" th:object="${user}" th:action="@{/login}" method="post">
         <table class="inputs" th:object="${user}">
             <tr>
